# cmaketutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt  header01.h
include/submodule/: CMakeLists.txt  submodule01.h
src/: CMakeLists.txt  header01.cpp
src/submodule/: CMakeLists.txt  submodule01.cpp
